# cpp-template

./: .gitignore  CMakeLists.txt  README.md  makefile  test.cpp
.github/workflows/: c-cpp.yml
Product/include/: class.h
Product/src/: class.cpp
cmake/: CompilerWarnings.cmake  Conan.cmake  Sanitizers.cmake  StandardProjectSettings.cmake  TopLevelCMake.cmake
scripts/: install_dependencies.sh
src/: CMakeLists.txt  main.cpp
src/Driver/: CMakeLists.txt  gpio.cpp  gpio.h
src/HAL/: hal.h
test/: CMakeLists.txt  constexpr_tests.cpp
test/Driver/: CMakeLists.txt  gpio.cpp
